@@ -1,5 +1,6 @@
 package org.example.lionhackaton.service;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.Year;
 import java.time.YearMonth;
@@ -8,16 +9,16 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.example.lionhackaton.domain.ChatGPTRequest;
 import org.example.lionhackaton.domain.ChatGPTResponse;
 import org.example.lionhackaton.domain.Diary;
 import org.example.lionhackaton.domain.User;
 import org.example.lionhackaton.domain.dto.request.DiaryRequest;
+import org.example.lionhackaton.domain.dto.response.CommentResponse;
 import org.example.lionhackaton.domain.dto.response.DiaryResponse;
 import org.example.lionhackaton.domain.oauth.CustomUserDetails;
+import org.example.lionhackaton.repository.CommentRepository;
 import org.example.lionhackaton.repository.DiaryRepository;
 import org.example.lionhackaton.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Value;
@@ -43,12 +44,15 @@ public class DiaryService {
 	@Value("${openai.api.url}")
 	private String apiURL;
 
+	private final CommentRepository commentRepository;
+
 	public DiaryService(RestTemplate template, DiaryRepository diaryRepository, UserRepository userRepository,
-		UserService userService) {
+		UserService userService, CommentRepository commentRepository) {
 		this.template = template;
 		this.diaryRepository = diaryRepository;
 		this.userRepository = userRepository;
 		this.userService = userService;
+		this.commentRepository = commentRepository;
 	}
 
 	@Transactional
@@ -68,6 +72,18 @@ public class DiaryService {
 		ResponseEntity<ChatGPTResponse> chatGPTResponse = template.exchange(apiURL, HttpMethod.POST, entity,
 			ChatGPTResponse.class);
 
+		LocalDateTime startOfDay = LocalDate.now().atStartOfDay();
+		LocalDateTime endOfDay = startOfDay.plusDays(1).minusSeconds(1);
+
+		if (diaryRequest.getIsRepresentative()) {
+			List<Diary> representativeDiaries = diaryRepository.findAllByIsRepresentativeTrueAndCreatedAtBetween(
+				startOfDay, endOfDay);
+			for (Diary diary : representativeDiaries) {
+				diary.setIsRepresentative(false);
+				diaryRepository.save(diary);
+			}
+		}
+
 		Diary diary = new Diary(
 			diaryRequest.getDiaryTitle(),
 			diaryRequest.getSodaIndex(),
@@ -80,20 +96,15 @@ public class DiaryService {
 			Objects.requireNonNull(chatGPTResponse.getBody()).getChoices().get(0).getMessage().getContent());
 
 		Diary save = diaryRepository.save(diary);
+
+		if (diaryRequest.getIsRepresentative()) {
+			diaryRepository.updateIsRepresentativeFalseByCreatedAtBetweenAndExcludeId(startOfDay, endOfDay,
+				save.getDiaryId());
+		}
+
 		userService.plusDiaryPoint(customUserDetails);
 
-		return new DiaryResponse(save.getDiaryId(),
-			save.getDiaryTitle(),
-			save.getSodaIndex(),
-			save.getContent(),
-			save.getPurpose(),
-			save.getGptComment(),
-			save.getCreatedAt(),
-			save.getUpdatedAt(),
-			save.getIsRepresentative(),
-			save.getIsShared(),
-			save.getIsFavorite(),
-			save.getUser().getId());
+		return getDiaryResponse(save);
 	}
 
 	private ChatGPTRequest getChatGPTRequest(DiaryRequest diaryRequest) {
@@ -108,7 +119,6 @@ public class DiaryService {
 	}
 
 	@Transactional
-
 	public DiaryResponse updateDiary(CustomUserDetails customUserDetails, Long id, Diary diaryDetails) {
 		User user = userRepository.findById(customUserDetails.getId())
 			.orElseThrow(() -> new RuntimeException("User not found"));
@@ -128,34 +138,34 @@ public class DiaryService {
 			return diaryRepository.save(diary);
 		}).orElseThrow(() -> new RuntimeException("Diary not found"));
 
-		return new DiaryResponse(
-			diary1.getDiaryId(),
-			diary1.getDiaryTitle(),
-			diary1.getSodaIndex(),
-			diary1.getContent(),
-			diary1.getPurpose(),
-			diary1.getGptComment(),
-			diary1.getCreatedAt(),
-			diary1.getUpdatedAt(),
-			diary1.getIsRepresentative(),
-			diary1.getIsShared(),
-			diary1.getIsFavorite(),
-			diary1.getUser().getId());
+		return getDiaryResponse(diary1);
 	}
 
 	public List<DiaryResponse> getAllDiaries() {
-		return diaryRepository.findAll().stream().map(diary -> new DiaryResponse(
+		return diaryRepository.findAll().stream().map(this::getDiaryResponse).toList();
+	}
+
+	private DiaryResponse getDiaryResponse(Diary diary) {
+		List<CommentResponse> list = new ArrayList<>(commentRepository.findByDiary_DiaryId(diary.getDiaryId())
+			.stream()
+			.map(comment -> new CommentResponse(comment.getCommentId(), comment.getContent(), comment.getIsChosen(),
+				comment.getCreatedAt(), comment.getUpdatedAt(), comment.getDiary().getDiaryId(),
+				comment.getUser().getId()))
+			.toList());
+
+		if (list.isEmpty()) {
+			list.add(new CommentResponse(null, null, null, null, null, null, null));
+		}
+
+		return new DiaryResponse(
 			diary.getDiaryId(),
 			diary.getDiaryTitle(), diary.getSodaIndex(), diary.getContent(), diary.getPurpose(),
 			diary.getGptComment(),
 			diary.getCreatedAt(), diary.getUpdatedAt(), diary.getIsRepresentative(), diary.getIsShared(),
 			diary.getIsFavorite(),
-			diary.getUser().getId()
-		)).toList();
-	}
-
-	public Optional<Diary> getDiaryById(Long id) {
-		return diaryRepository.findById(id);
+			diary.getUser().getId(),
+			list
+		);
 	}
 
 	@Transactional
@@ -177,19 +187,37 @@ public class DiaryService {
 			.orElseThrow(() -> new RuntimeException("User not found"));
 
 		return user.getDiaries().stream()
-			.map(diary -> new DiaryResponse(
-				diary.getDiaryId(),
-				diary.getDiaryTitle(),
-				diary.getSodaIndex(),
-				diary.getContent(),
-				diary.getPurpose(),
-				diary.getGptComment(),
-				diary.getCreatedAt(),
-				diary.getUpdatedAt(),
-				diary.getIsRepresentative(),
-				diary.getIsShared(),
-				diary.getIsFavorite(),
-				diary.getUser().getId()))
+			.map(diary -> {
+					List<CommentResponse> list = new ArrayList<>(
+						commentRepository.findByDiary_DiaryId(diary.getDiaryId())
+							.stream()
+							.map(comment -> new CommentResponse(comment.getCommentId(), comment.getContent(),
+								comment.getIsChosen(),
+								comment.getCreatedAt(), comment.getUpdatedAt(), comment.getDiary().getDiaryId(),
+								comment.getUser().getId()))
+							.toList());
+
+					if (list.isEmpty()) {
+						list.add(new CommentResponse(null, null, null, null, null, null, null));
+					}
+
+					return new DiaryResponse(
+						diary.getDiaryId(),
+						diary.getDiaryTitle(),
+						diary.getSodaIndex(),
+						diary.getContent(),
+						diary.getPurpose(),
+						diary.getGptComment(),
+						diary.getCreatedAt(),
+						diary.getUpdatedAt(),
+						diary.getIsRepresentative(),
+						diary.getIsShared(),
+						diary.getIsFavorite(),
+						diary.getUser().getId(),
+						list);
+				}
+			)
+
 			.toList();
 	}
 
@@ -205,18 +233,15 @@ public class DiaryService {
 		diary.setIsFavorite(!diary.getIsFavorite());
 
 		Diary save = diaryRepository.save(diary);
-		return new DiaryResponse(save.getDiaryId(),
-			save.getDiaryTitle(),
-			save.getSodaIndex(),
-			save.getContent(),
-			save.getPurpose(),
-			save.getGptComment(),
-			save.getCreatedAt(),
-			save.getUpdatedAt(),
-			save.getIsRepresentative(),
-			save.getIsShared(),
-			save.getIsFavorite(),
-			save.getUser().getId());
+
+		List<CommentResponse> list = new ArrayList<>(commentRepository.findByDiary_DiaryId(save.getDiaryId())
+			.stream()
+			.map(comment -> new CommentResponse(comment.getCommentId(), comment.getContent(), comment.getIsChosen(),
+				comment.getCreatedAt(), comment.getUpdatedAt(), comment.getDiary().getDiaryId(),
+				comment.getUser().getId()))
+			.toList());
+
+		return getDiaryResponse(save, list);
 	}
 
 	@Transactional
@@ -231,6 +256,22 @@ public class DiaryService {
 		diary.setIsShared(!diary.getIsShared());
 
 		Diary save = diaryRepository.save(diary);
+
+		List<CommentResponse> list = commentRepository.findByDiary_DiaryId(save.getDiaryId())
+			.stream()
+			.map(comment -> new CommentResponse(comment.getCommentId(), comment.getContent(), comment.getIsChosen(),
+				comment.getCreatedAt(), comment.getUpdatedAt(), comment.getDiary().getDiaryId(),
+				comment.getUser().getId()))
+			.toList();
+
+		return getDiaryResponse(save, list);
+	}
+
+	private DiaryResponse getDiaryResponse(Diary save, List<CommentResponse> list) {
+		if (list.isEmpty()) {
+			list.add(new CommentResponse(null, null, null, null, null, null, null));
+		}
+
 		return new DiaryResponse(save.getDiaryId(),
 			save.getDiaryTitle(),
 			save.getSodaIndex(),
@@ -242,25 +283,38 @@ public class DiaryService {
 			save.getIsRepresentative(),
 			save.getIsShared(),
 			save.getIsFavorite(),
-			save.getUser().getId());
+			save.getUser().getId(), list);
 	}
 
 	@Transactional
 	public Map<Integer, Double> getDailySodaIndexesForMonth(CustomUserDetails customUserDetails, YearMonth yearMonth) {
 		LocalDateTime startDate = yearMonth.atDay(1).atStartOfDay();
 		LocalDateTime endDate = yearMonth.atEndOfMonth().atTime(23, 59, 59);
+		System.out.println("startDate = " + startDate);
+		System.out.println("endDate = " + endDate);
+
+		// 일기 가져오기
 		List<Diary> diaries = diaryRepository.findByUserIdAndCreatedAtBetween(customUserDetails.getId(), startDate,
 				endDate)
 			.stream()
 			.filter(Diary::getIsRepresentative)
-			.collect(Collectors.toList());
+			.toList();
 
-		// 날짜별로 sodaIndex 값을 그룹화하고, 대표 다이어리 항목의 sodaIndex 값만 반환합니다.
-		return diaries.stream()
-			.collect(Collectors.groupingBy(
-				diary -> diary.getCreatedAt().getDayOfMonth(),
-				Collectors.averagingDouble(Diary::getSodaIndex) // 하루에 여러 개의 대표 항목이 있을 경우 평균값을 반환합니다.
-			));
+		// 일자별 sodaIndex 저장할 맵
+		Map<Integer, Double> sodaIndexes = new HashMap<>();
+
+		// 모든 날짜에 null 값 넣기
+		for (int day = 1; day <= yearMonth.lengthOfMonth(); day++) {
+			sodaIndexes.put(day, null);
+		}
+
+		// 일기 날짜와 sodaIndex 매핑
+		diaries.forEach(diary -> {
+			int dayOfMonth = diary.getCreatedAt().getDayOfMonth();
+			sodaIndexes.put(dayOfMonth, diary.getSodaIndex().doubleValue());
+		});
+
+		return sodaIndexes;
 	}
 
 	@Transactional
@@ -283,8 +337,21 @@ public class DiaryService {
 		User user = userRepository.findById(customUserDetails.getId())
 			.orElseThrow(() -> new NotFoundException("User not found"));
 
-		return user.getDiaries().stream().map(diary -> {
-			if (diary.getIsFavorite()) {
+		return user.getDiaries().stream()
+			.filter(Diary::getIsFavorite) // Favorite인 항목만 필터링
+			.map(diary -> {
+				List<CommentResponse> list = new ArrayList<>(commentRepository.findByDiary_DiaryId(diary.getDiaryId())
+					.stream()
+					.map(comment -> new CommentResponse(comment.getCommentId(), comment.getContent(),
+						comment.getIsChosen(),
+						comment.getCreatedAt(), comment.getUpdatedAt(), comment.getDiary().getDiaryId(),
+						comment.getUser().getId()))
+					.toList());
+
+				if (list.isEmpty()) {
+					list.add(new CommentResponse(null, null, null, null, null, null, null));
+				}
+
 				return new DiaryResponse(
 					diary.getDiaryId(),
 					diary.getDiaryTitle(),
@@ -297,17 +364,29 @@ public class DiaryService {
 					diary.getIsRepresentative(),
 					diary.getIsFavorite(),
 					diary.getIsShared(),
-					diary.getUser().getId());
-			} else {
-				return null;
-			}
-		}).toList();
+					diary.getUser().getId(),
+					list);
+			})
+			.toList();
 	}
+
 
 	public List<DiaryResponse> getSharedDiaries() {
 		List<Diary> sharedDiaries = diaryRepository.findByIsShared(true);
 		List<DiaryResponse> sharedDiariesResponse = new ArrayList<>();
 		for (Diary diary : sharedDiaries) {
+			List<CommentResponse> list = new ArrayList<>(commentRepository.findByDiary_DiaryId(diary.getDiaryId())
+				.stream()
+				.map(comment -> new CommentResponse(comment.getCommentId(), comment.getContent(),
+					comment.getIsChosen(),
+					comment.getCreatedAt(), comment.getUpdatedAt(), comment.getDiary().getDiaryId(),
+					comment.getUser().getId()))
+				.toList());
+
+			if (list.isEmpty()) {
+				list.add(new CommentResponse(null, null, null, null, null, null, null));
+			}
+
 			sharedDiariesResponse.add(new DiaryResponse(
 				diary.getDiaryId(),
 				diary.getDiaryTitle(),
@@ -320,7 +399,9 @@ public class DiaryService {
 				diary.getIsRepresentative(),
 				diary.getIsFavorite(),
 				diary.getIsShared(),
-				diary.getUser().getId()));
+				diary.getUser().getId(),
+				list
+			));
 		}
 
 		return sharedDiariesResponse;
